--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGO_URI = mongodb+srv://nextjs13:nextjs13@inotebook.ukflwtj.mongodb.net
+MONGO = mongodb+srv://nextjs13:nextjs13@inotebook.ukflwtj.mongodb.net
 
-JWT_SECRET = ajksdhaskjdhasjkdhjkashdjsakdh
+JWTSECRET = ajksdhaskjdhasjkdhjkashdjsakdh
 
 
 URL = http://localhost:3000
